--- a/poolchampionUI/src/app/Views/login/login.component.html
+++ b/poolchampionUI/src/app/Views/login/login.component.html
@@ -1,3 +1,30 @@
-<p>
-  login works!
-</p>
+<div class="container-fluid main-container-wrapper">
+  <div class="row main-row">
+    <div class="col-lg-7 bg-col"></div>
+    <div class="col-lg-5 login-col"></div>
+
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
