--- a/poolchampionUI/src/app/Views/login/login.component.css
+++ b/poolchampionUI/src/app/Views/login/login.component.css
@@ -16,7 +16,17 @@
 
 }
 
+
 .login-col{
     height:100vh;
     width:100%;
 }
+
+.login-container {
+    height:100%;
+}
+
+.login-row{
+    height:100%;
+}
+
