--- a/poolchampionUI/src/app/app.component.html
+++ b/poolchampionUI/src/app/app.component.html
@@ -1,2 +1,7 @@
-<router-outlet></router-outlet>
+
+<main [@routeAnimations]="prepareRoute(outlet)">
+        <router-outlet #outlet="outlet"></router-outlet>
+
+</main>
+
 
