--- a/poolchampionUI/src/app/Views/login/login.component.html
+++ b/poolchampionUI/src/app/Views/login/login.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid main-container-wrapper">
   <div class="row main-row">
-    <div class="col-lg-6 bg-col"></div>
-    <div class="col-lg-6 login-col">
+    <div class="col-lg-8 bg-col"></div>
+    <div class="col-lg-4 login-col">
       <div class="container-fluid login-container">
         <div class="row justify-content-center align-items-center login-row">
           <div class="col-lg-5 text-center">
 
             <form class="example-form">
-              <mat-form-field class="example-full-width">
+                 <mat-form-field class="example-full-width">
                 <input matInput placeholder="Email" [formControl]="emailFormControl">
                 <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
                   Please enter a valid email address
@@ -18,11 +18,21 @@
               </mat-form-field>
 
               <mat-form-field class="example-full-width">
-                  <input matInput type="password" placeholder="Password">
-                </mat-form-field>
-                <br />
-                    <button mat-stroked-button color="accent">Accent</button>
+                <input matInput type="password" placeholder="Password">
+              </mat-form-field>
+             
+              <br />
+              <br />
 
+              <button mat-raised-button color="primary">Primary</button>
+              <br />
+              <br />
+
+
+              <a href="#" class="btn btn-link">forgot Password?</a> 
+              <a href="signup" class="btn btn-link">Signup</a>
+
+              <br />
 
 
             </form>
