--- a/poolchampionUI/src/app/Components/login/login.component.html
+++ b/poolchampionUI/src/app/Components/login/login.component.html
@@ -1,10 +1,10 @@
-<div class="container-fluid main-container-wrapper">
+<!-- <div class="container-fluid main-container-wrapper">
     <div class="row main-row">
       <div class="col-lg-8 bg-col"></div>
       <div class="col-lg-4 login-col">
         <div class="container-fluid login-container">
           <div class="row justify-content-center align-items-center login-row">
-            <div class="col-lg-5 text-center">
+            <div class="col-lg-5 text-center"> -->
   
               <form class="example-form">
                    <mat-form-field class="example-full-width">
@@ -37,8 +37,9 @@
   
               </form>
   
-            </div>
+            <!-- </div>
           </div>
         </div>
       </div>
     </div>
+   -->
