--- a/poolchampionUI/src/app/Views/login-page/login-page.component.css
+++ b/poolchampionUI/src/app/Views/login-page/login-page.component.css
@@ -14,7 +14,7 @@
     background-repeat: no-repeat;
 
 }
-/* 
+
 
 .login-col{
     height:100vh;
@@ -27,4 +27,4 @@
 
 .login-row{
     height:100%;
-} */
+}
