--- a/poolchampionUI/src/app/Views/login-page/login-page.component.html
+++ b/poolchampionUI/src/app/Views/login-page/login-page.component.html
@@ -1,81 +1,90 @@
 <div class="container-fluid main-container-wrapper">
-    <div class="row main-row">
-      <div class="col-lg-8 bg-col"></div>
-      <div class="col-lg-4 login-col">
-        <div class="container-fluid login-container">
-          <div class="row justify-content-center align-items-center login-row">
-            <div class="col-lg-5 text-center" *ngIf="needsToRegister === false">
-  
-                <form class="example-form">
-                    <mat-form-field class="example-full-width">
-                   <input matInput placeholder="Email" [formControl]="emailFormControl">
-                   <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                     Please enter a valid email address
-                   </mat-error>
-                   <mat-error *ngIf="emailFormControl.hasError('required')">
-                     Email is <strong>required</strong>
-                   </mat-error>
-                 </mat-form-field>
-   
-                 <mat-form-field class="example-full-width">
-                   <input matInput type="password" placeholder="Password">
-                 </mat-form-field>
-                
-                 <br />
-                 <br />
-   
-                 <button mat-raised-button color="primary">Login</button>
-                 <br />
-                 <br />
-   
-   
-                 <a href="#" class="btn btn-link">forgot Password?</a> 
-                 <button (click)="switchOnSignup()" class="btn btn-link">Signup</button>
-   
-                 <br />
-   
-   
-               </form>
-   
-             </div>
+  <div class="row main-row">
+    <div class="col-lg-8 bg-col"></div>
+    <div class="col-lg-4 login-col">
+      <div class="container-fluid login-container">
+        <div class="row justify-content-center align-items-center login-row">
+          <div class="col-lg-5 text-center" *ngIf="needsToRegister === false">
 
-             <div class="col-lg-5 text-center" *ngIf="needsToRegister === true">
-  
-                <form class="example-form">
-                    <mat-form-field class="example-full-width">
-                   <input matInput placeholder="Email" [formControl]="emailFormControl">
-                   <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                     Please enter a valid email address
-                   </mat-error>
-                   <mat-error *ngIf="emailFormControl.hasError('required')">
-                     Email is <strong>required</strong>
-                   </mat-error>
-                 </mat-form-field>
-   
-                 <mat-form-field class="example-full-width">
-                   <input matInput type="password" placeholder="Password">
-                 </mat-form-field>
-                
-                 <br />
-                 <br />
-   
-                 <button mat-raised-button color="primary">Login</button>
-                 <br />
-                 <br />
-   
-   
-                 <a href="#" class="btn btn-link">forgot Password?</a> 
-                 <a href="signup" class="btn btn-link">Signup</a>
-   
-                 <br />
-   
-   
-               </form>
-   
-             </div>
+            <form class="example-form">
+              <mat-form-field class="example-full-width">
+                <input matInput placeholder="Email" [formControl]="emailFormControl">
+                <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                  Please enter a valid email address
+                </mat-error>
+                <mat-error *ngIf="emailFormControl.hasError('required')">
+                  Email is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
 
-           </div>
-         </div>
-       </div>
-     </div>
-   
+              <mat-form-field class="example-full-width">
+                <input matInput type="password" placeholder="Password">
+              </mat-form-field>
+
+              <br />
+              <br />
+
+              <button mat-raised-button color="primary">Login</button>
+              <br />
+              <br />
+
+
+              <a href="#" class="btn btn-link">forgot Password?</a>
+              <button (click)="switchOnSignup()" class="btn btn-link">Signup</button>
+
+              <br />
+
+
+            </form>
+
+          </div>
+
+          <div class="col-lg-5 text-center" *ngIf="needsToRegister === true">
+            <h3>Welcome to PoolChamp</h3>
+            <form class="example-form" (ngSubmit)="signUp()" #UserSignUp="ngForm">
+
+              <mat-form-field class="example-full-width">
+                <input matInput  placeholder="Name" [formControl]="userNameFormControl">
+                <mat-error *ngIf="userNameFormControl.hasError('required')">
+                    Name is <strong>required</strong>
+                  </mat-error>
+              </mat-form-field>
+
+              <mat-form-field class="example-full-width">
+                <input matInput placeholder="Email" [formControl]="emailFormControl">
+                <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                  Please enter a valid email address
+                </mat-error>
+                <mat-error *ngIf="emailFormControl.hasError('required')">
+                  Email is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+
+              <mat-form-field class="example-full-width">
+                <input matInput type="password" placeholder="Password" [formControl]="passwordFormControl">
+                <mat-error *ngIf="passwordFormControl.hasError('required')">
+                    Password is <strong>required</strong>
+                  </mat-error>
+              </mat-form-field>
+
+              <br />
+              <br />
+
+              <button mat-raised-button color="primary" type="submit">Login</button>
+              <br />
+              <br />
+
+
+             
+
+              <br />
+
+
+            </form>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
