--- a/poolchampionUI/src/app/Views/main-ranking/main-ranking.component.html
+++ b/poolchampionUI/src/app/Views/main-ranking/main-ranking.component.html
@@ -1,3 +1,33 @@
-<p>
-  main-ranking works!
-</p>
+
+<div>
+
+
+
+<div class="example-container mat-elevation-z8">
+  <table mat-table [dataSource]="ranking">
+
+     <!-- Position -->
+     <ng-container matColumnDef="position">
+        <th mat-header-cell [ngClass]="'customWidthClass'" *matHeaderCellDef> Position </th>
+        <td mat-cell [ngClass]="'customWidthClass'" *matCellDef="let element"> {{ranking.indexOf(element) +1}} </td>
+      </ng-container>
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell [ngClass]="'customWidthClass'" *matHeaderCellDef> Name </th>
+      <td mat-cell [ngClass]="'customWidthClass'" *matCellDef="let element"> {{element.playerName}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="points">
+      <th mat-header-cell [ngClass]="'customWidthClass'" *matHeaderCellDef> Points </th>
+      <td mat-cell [ngClass]="'customWidthClass'" *matCellDef="let element"> {{element.points}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
+
+
+</div>
