--- a/poolchampionUI/src/app/Modals/add-game-modal/add-game-modal.component.html
+++ b/poolchampionUI/src/app/Modals/add-game-modal/add-game-modal.component.html
@@ -24,7 +24,7 @@
 
       <mat-form-field>
         <mat-label>Winner</mat-label>
-        <mat-select [(ngModel)]="winner" name="winner" (ngModelChange)="selectWinner()">
+        <mat-select [(ngModel)]="winner" name="winner" >
           <mat-option *ngFor="let player of playersInSingleGame" [value]="player">
             {{player.name}}
           </mat-option>
